# getting-job-agent-system

./: README.md  pyproject.toml  report.md
knowledge/: user_preference.txt
src/agent_1/: crew.py  main.py
src/agent_1/config/: agents.yaml  tasks.yaml
src/agent_1/tools/: jobkorea.py  jobkorea_login.py  web_search_tool.py
