[project]
name = "agent_1"
version = "0.1.0"
description = "agent-1 using crewAI"
authors = [{ name = "Ruah", email = "kimhk0315@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "selenium",
    "webdriver-manager"
]

[project.scripts]
agent_1 = "agent_1.main:run"
run_crew = "agent_1.main:run"
train = "agent_1.main:train"
replay = "agent_1.main:replay"
test = "agent_1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
